--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     margin: 0;
 }
 .container {
-    height: calc(100vh - 40px) ;
+    height: 100vh;
     padding-left: 120px;
     padding-right: 120px;
     display: flex;
@@ -62,6 +62,7 @@ body {
     font-weight: 600;
 }
 .formarea form {
+
     width: 100%;
     background-color: white;
     padding: 30px;
@@ -73,7 +74,6 @@ body {
     padding: 15px 25px;
     border-radius: 8px;
     border: 1px solid var(--Grayish-Blue);
-    margin-bottom: 15px;
     outline: none;
 }
 .formarea form input.wrong{
@@ -83,21 +83,25 @@ body {
 }
 .formarea form .inpt {
     position: relative;
+    height: fit-content;
+    height: 55px;
+    margin-bottom: 20px;
+}
+.formarea form .inpt img {
+    opacity: 0;
+    position: absolute;
+    top: 44%;
+    transform: translateY(-50%);
+    right: 17px;
+    height: 20px;
 }
 .formarea form .inpt > span {
     font-size: 11px;
     float: right;
-    margin-bottom: 12px;
+    margin-top: 1px;
+    margin-bottom: 4px;
     color: var(--Red);
     font-weight: 600;
-    display: none;
-}
-.formarea form .inpt.active::before{
-    content: url('images/icon-error.svg');
-    position: absolute;
-    z-index: 30;
-    top: 12px;
-    right: 7%;
 }
 .formarea form input::placeholder{
     font-family: inherit;
@@ -119,8 +123,26 @@ body {
 .formarea form p {
     font-size: 11px;
     color: var(--Grayish-Blue);
+    margin-bottom: 0;
 }
 .formarea form p span {
     color: var(--Red);
     font-weight: 700;
+}
+@media (max-width:767px) {
+    .container {
+        height: 100%;
+        padding-bottom: 20px;
+        flex-direction: column;
+        text-align: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .text h2 {
+        font-size: 30px;
+    }
+    .text p {
+        margin-bottom: 55px;
+    }
+
 }
